--- a/index.html
+++ b/index.html
@@ -29,6 +29,63 @@
   
   padding: 1rem;
 } */
+ /* body {
+            overflow: hidden; 
+        }  */
+
+        /* #preloader {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: #ffffff;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            z-index: 1000;
+        } */
+
+        /* #newYearMessage {
+          border-radius: 50px;
+          margin-left: 0;
+          margin-right: 0;
+            font-size: 30px;
+            text-align: center;
+            padding: 20px;
+            background-color: black;
+            position: fixed;
+            top: 50%;
+            left: 50%;
+            width: 90%;
+            height: 70%;
+            transform: translate(-50%, -50%);
+            z-index: 999;
+            opacity: 0;
+            animation: fadeIn 1s ease-out forwards; 
+        }
+        .year{
+          border-radius: 10px;
+          height: 300px;
+          width: 500px;
+        }
+
+        #year2024 {
+          margin-top: 90px;
+            color: white;
+            font-size: 30px;
+            opacity: 0;
+            animation: fadeIn 2s ease-out 3s forwards; /* Start 1s after the "Happy New Year" message */
+        /* }
+
+        @keyframes fadeIn {
+            from {
+                opacity: 0;
+            }
+            to {
+                opacity: 1;
+            }
+        }  */
 
 
 
@@ -129,6 +186,16 @@
 </head>
 
 <body>
+  <!-- <div id="newYearMessage">
+    Happy New Year! 🎉 Wishing you a year filled with joy and success.
+    <img src="/images/new year.webp" class="year" alt="">
+    <h1 id="year2024">2024</h1>
+   
+</div> -->
+
+<!-- <h1 id="year2024">2024</h1> -->
+<!-- <h1 style="color: black; font-size: 30px;">2024</h1> -->
+
   
   
   <div class="preloader">
@@ -519,7 +586,7 @@
       <div class="container">
         <div class="row justify-content-center text-center">
           <div class="col-md-10 col-lg-8" >
-            <div class="header-section">
+            <div class="header-section" style="margin-bottom: -40px;">
               <h2 class="title wow slideInDown">Exclusive Services</h2>
 
               <!-- <h2 class="title" class= "wow slideInDown">Exclusive Services</h2> -->
