animations error fixed

--- a/index.html
+++ b/index.html
@@ -725,7 +725,7 @@
 
 
     <!-- <div class="container" ></div> -->
-    <h1 class="pro wow slideInLeft" id="jet">Project Section</h1>
+    <h1  class="pro "  id="jet">Project Section</h1>
 
     <div class="Btns">
       <button id="all" class="active tab-btn" style="color: blue;">All</button>
@@ -735,8 +735,8 @@
       <button id="vanilla" class="tab-btn">Songs</button>
     </div>
 
-    <div class="projects-container wow slideInLeft">
-      <div class="project wow slideInLeft">
+    <div class="projects-container ">
+      <div class="project ">
         <!-- <img src="images/portfolio-1.jpg" alt="" />
         <div class="project-info">
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
