--- a/about-us.html
+++ b/about-us.html
@@ -98,9 +98,11 @@ a {
 }
 
 .text-blk.subHeadingText {
-  font-style: italic;
+  
   /* color: blue; */
-  font-size: 26px;
+  color: black;
+  font-weight: bold;
+  font-size: 25px;
   line-height: 32px;
   /* font-weight: 700; */
   margin-top: 0px;
@@ -694,7 +696,7 @@ a {
               About Us
             </p>
             <p class="text-blk subHeadingText" >
-              What sets our agency apart is our commitment to delivering results-driven campaigns tailored to meet <span style="color: black;">the unique goals and visions of each and every client.</span>
+              What sets our agency apart is our commitment to delivering results-driven campaigns tailored to meet the unique goals and visions of each and every client.
             </p>
             <p class="text-blk description">
               We are committed to delivering measurable and impactful results that align
