--- a/index.html
+++ b/index.html
@@ -117,10 +117,12 @@
       }
 
       .project {
-        margin-left: 10px;
+       margin-left: auto; 
     width: 350px;
-    /* height: 250px; */
     margin-bottom: 1rem;
+    /* display: flex;
+    justify-content: center;
+    align-items: center; */
 }
       }
     
