--- a/index.html
+++ b/index.html
@@ -118,6 +118,7 @@
 
       .project {
        margin-left: auto; 
+       margin-right: auto;
     width: 350px;
     margin-bottom: 1rem;
     /* display: flex;
