--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     .pro {
       text-align: center;
       padding: 1rem 0;
-      /* color: blue; */
+      color: black;
     }
 
     .Btns {
@@ -41,12 +41,13 @@
     }
 
     button {
-      background-color: blue;
-      color: white;
+      background-color: black;
+      color: rgb(14, 102, 236);
       border: none;
       padding: 0.5rem 1rem;
       cursor: pointer;
       text-transform: capitalize;
+      border-radius: 12px;
     }
 
     button:hover,
