--- a/our-team.html
+++ b/our-team.html
@@ -427,7 +427,7 @@
                             </div>
                             <div class="lower-content">
                                 <h3><a href="#">Mohd Amaan </a></h3>
-                                <div class="designation">Director </div>
+                                <div class="designation">Founder </div>
                             </div>
                         </div>
                     </div>
