--- a/our-services.html
+++ b/our-services.html
@@ -254,10 +254,11 @@ background: linear-gradient(to bottom, #434343, #000000);
                     </li>
                     <li class="rd-nav-item active"><a class="rd-nav-link" href="our-services.html">Services</a>
                     </li>
-                    <li class="rd-nav-item"><a class="rd-nav-link" href="contacts.html">Contact us</a>
-                    </li>
                     <li class="rd-nav-item"><a class="rd-nav-link" href="our-team.html">Team</a>
                     </li>
+                    <li class="rd-nav-item"><a class="rd-nav-link" href="contacts.html">Contact us</a>
+                    </li>
+                    
                   </ul>
                 </div>
               </div>
@@ -529,6 +530,7 @@ background: linear-gradient(to bottom, #434343, #000000);
                         <li><a href="about-us.html">About us</a></li>
                         <li><a href="our-services.html">Services</a></li>
                         <!-- <li><a href="#">Blog</a></li> -->
+                        <li><a href="our-team.html">Team</a></li>
                         <li><a href="contacts.html">Contact us</a></li>
                       </ul>
                     </div>
