--- a/contacts.html
+++ b/contacts.html
@@ -15,7 +15,7 @@
   </head>
   <body>
    
-    <div class="preloader">
+    <!-- <div class="preloader">
       <div class="preloader-logo"><img src="images/whiteshadow.jpg" alt="" width="151" height="44" srcset="images/whiteshadow.jpg 2x"/>
       </div>
       <div class="preloader-body">
@@ -23,7 +23,7 @@
           <div class="loadingProgressG" id="loadingProgressG_1"></div>
         </div>
       </div>
-    </div>
+    </div> -->
     <div class="page">
       <!-- Page Header-->
       <!-- <a class="banner banner-top" href="https://www.templatemonster.com/intense-multipurpose-html-template.html" target="_blank"><img src="images/intense_02.jpg" alt=""/></a> -->
