--- a/contacts.html
+++ b/contacts.html
@@ -26,7 +26,7 @@
     </div> -->
     <div class="page">
       <!-- Page Header-->
-      <!-- <a class="banner banner-top" href="https://www.templatemonster.com/intense-multipurpose-html-template.html" target="_blank"><img src="images/intense_02.jpg" alt=""/></a> -->
+      
       <header class="section novi-background page-header">
         <!-- RD Navbar-->
         <div class="rd-navbar-wrap">
@@ -312,7 +312,8 @@
               </div>
               <div class="footer-advanced-aside">
                 <div class="container">
-                  <div class="footer-advanced-layout"><a class="brand" href="index.html"><img style="border-radius: 14px;" src="images/whiteshadow.jpg" alt="" width="115" height="34" srcset="images/whiteshadow.jpg 2x"/></a>
+                  <div class="footer-advanced-layout"><a class="brand" href="index.html">
+                    <img src="images/shadow.png" alt="" width="115" height="34" srcset="images/whiteshadow.jpg 2x" /></a>
                     <!-- Rights-->
                     <p class="rights"><span>&copy;&nbsp;</span><span class="copyright-year"></span> All Rights Reserved. Design
                       By <a href="#" style="color:red; font-size: medium;">Azhar Ahmad</a></p>
