--- a/about-us.html
+++ b/about-us.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="css/style.css" id="main-styles-link">
      <style>
       .responsive-container-block {
+        background-color: black;
         /* font-family: Nunito, sans-serif; */
   min-height: 75px;
   height: fit-content;
@@ -47,6 +48,7 @@ a {
   padding-bottom: 10px;
   padding-left: 10px;
   line-height: 25px;
+  
 }
 
 .responsive-container-block.bigContainer {
@@ -58,10 +60,12 @@ a {
   align-items: center;
   justify-content: center;
   padding: 10px 50px 10px 50px;
+  
 }
 
 .mainImg {
-  color: black;
+  
+  /* color: black; */
   width: 100%;
   height: auto;
   border-top-left-radius: 10px;
@@ -74,7 +78,8 @@ a {
   font-size: 30px;
   font-weight: 700;
   line-height: 30px;
-  color: black;
+  color: white;
+  /* color: black; */
   padding-top: 0px;
   padding-right: 10px;
   padding-bottom: 20px;
@@ -98,9 +103,10 @@ a {
 }
 
 .text-blk.subHeadingText {
+  color: white;
   
   /* color: blue; */
-  color: black;
+  /* color: black; */
   font-weight: bold;
   font-size: 25px;
   line-height: 32px;
@@ -119,7 +125,8 @@ a {
   font-size: 18px;
   
   line-height: 26px;
-  color: rgb(102, 102, 102);
+  color: white;
+  /* color: rgb(102, 102, 102); */
   margin-top: 0px;
   margin-right: 0px;
   margin-bottom: 50px;
@@ -175,7 +182,7 @@ a {
   background-origin: initial;
   background-clip: initial;
   background-color: black;
-  color: white;
+  color: black;
   border-top-width: initial;
   border-right-width: initial;
   border-bottom-width: initial;
@@ -666,12 +673,12 @@ a {
         </div>
       </header>
       <!-- Breadcrumbs -->
-      <section class="section novi-background breadcrumbs-custom bg-image context-dark" style="background-image: url(/images/service.png);">
+      <section class="section novi-background breadcrumbs-custom bg-image context-dark" style="background-image: url(/images/hero1.png);">
         <div class="breadcrumbs-custom-inner">
           <div class="container breadcrumbs-custom-container">
             <div class="breadcrumbs-custom-main">
               <h6 class="breadcrumbs-custom-subtitle title-decorated">About us</h6>
-              <h2 class="text-uppercase breadcrumbs-custom-title" >About us</h2>
+              <h2 class="text-uppercase breadcrumbs-custom-title"  >About us</h2>
             </div>
             <ul class="breadcrumbs-custom-path">
               <li><a href="index.html">Home</a></li>
@@ -724,7 +731,7 @@ a {
       </div> -->
       
       <!-- Advantages and Achievements-->
-      <section class="section novi-background section-md text-center bg-gray-100">
+      <section class="section novi-background section-md text-center bg-gray-100" style="background-color: black;">
         <div class="container">
           <h3 class="text-uppercase wow-outer"><span class="wow slideInUp">Why people Choose Us</span></h3>
           <p class="wow-outer"><span class="text-width-1 wow slideInDown">What sets our agency apart is our commitment to delivering results-driven campaigns tailored to meet the unique goals and visions of each and every client. We 🌟
@@ -774,14 +781,14 @@ a {
           </div>
         </div>
       </section>
-      <section class="section novi-background section-lg text-center">
+      <section class="section novi-background section-lg text-center" style="background-image: url(images/hero1.png);">
         <div class="container">
           <h3 class="text-uppercase wow-outer"><span class="wow slideInUp">Our Team</span></h3>
           <div class="row row-50 row-xxl-70 justify-content-center justify-content-lg-start">
             <div class="col-md-10 col-lg-6 wow-outer">
               <!-- Profile Creative-->
               <article class="profile-creative wow slideInLeft">
-                <figure class="profile-creative-figure"><img class="profile-creative-image" src="images/amaan.jpg" alt="" width="270" height="273"/>
+                <figure class="profile-creative-figure"><img class="profile-creative-image" src="images/aman1.png" alt="" width="270" height="273"/>
                 </figure>
                 <div class="profile-creative-main">
                   <h5 class="profile-creative-title"><a href="#">Mohd Amaan</a></h5>
@@ -789,7 +796,7 @@ a {
                   <div class="profile-creative-contacts">
                     <div class="object-inline"><span class="icon novi-icon icon-md mdi mdi-phone"></span><a href="tel:+91 9906531735">+91 9906531735</a></div>
                   </div>
-                  <p>
+                  <p style="color: white;">
                   Mohd Amaan founded  white shadow networks in 2022 with a vision to excel in media and public relations, providing innovative solutions to help clients
                 </p>
                 </div>
@@ -806,7 +813,7 @@ a {
                   <div class="profile-creative-contacts">
                     <!-- <div class="object-inline"><span class="icon novi-icon icon-md mdi mdi-phone"></span><a href="tel:+91 7710182001">+91 7710182001</a></div> -->
                   </div>
-                  <p>Mr. Sandy is a renowned director with extensive experience in the media industry. With a wealth of knowledge and a proven track record, he has been a driving force behind numerous successful projects. </p>
+                  <p style="color: white;">Mr. Sandy is a renowned director with extensive experience in the media industry. With a wealth of knowledge and a proven track record, he has been a driving force behind numerous successful projects. </p>
                 </div>
               </article>
             </div>
@@ -821,7 +828,7 @@ a {
                   <div class="profile-creative-contacts">
                     <div class="object-inline"><span class="icon novi-icon icon-md mdi mdi-phone"></span><a href="tel:91 7051203505">+91 7051203505</a></div>
                   </div>
-                  <p>Mr. Udeen Wani has been in the indian PR industry since a long time.he is the co-founder white shadow networks a PR agency in india specializing in corporate public realtions </p>
+                  <p style="color: white;">Mr. Udeen Wani has been in the indian PR industry since a long time.he is the co-founder white shadow networks a PR agency in india specializing in corporate public realtions </p>
                 </div>
               </article>
             </div>
@@ -836,14 +843,14 @@ a {
                   <div class="profile-creative-contacts">
                     <div class="object-inline"><span class="icon novi-icon icon-md mdi mdi-phone"></span><a href="tel:+91 9149830299">+91 9149830299</a></div>
                   </div>
-                  <p>Mr. Owais Reshi is recognized as one of the most talented individuals in the industry, known for delivering excellent results and establishing remarkable records. With a proven track record of success. </p>
+                  <p style="color: white;">Mr. Owais Reshi is recognized as one of the most talented individuals in the industry, known for delivering excellent results and establishing remarkable records. With a proven track record of success. </p>
                 </div>
               </article>
             </div>
           </div>
         </div>
       </section>
-      <section class="section novi-background section-lg bg-gray-100">
+      <section class="section novi-background section-lg bg-gray-100" style="background-color: black;">
         <div class="container">
           <div class="row row-30">
             <div class="col-sm-6 col-lg-4 wow-outer">
@@ -851,7 +858,7 @@ a {
               <article class="box-minimal">
                 <div class="box-chloe__icon novi-icon linearicons-user wow fadeIn"></div>
                 <div class="box-minimal-main wow-outer">
-                  <h4 class="box-minimal-title wow slideInDown">Qualified Employees</h4>
+                  <h4 class="box-minimal-title wow slideInDown" style="color: white;">Qualified Employees</h4>
                   <p class="wow fadeInUpSmall">Our team consists of more than 20 qualified and experienced employees
                     and they are ready to help you.</p>
                 </div>
@@ -862,7 +869,7 @@ a {
               <article class="box-minimal">
                 <div class="box-chloe__icon novi-icon linearicons-bubble-text wow fadeIn" data-wow-delay=".1s"></div>
                 <div class="box-minimal-main wow-outer">
-                  <h4 class="box-minimal-title wow slideInDown" data-wow-delay=".1s">Free Consultations</h4>
+                  <h4 class="box-minimal-title wow slideInDown" style="color: white;" data-wow-delay=".1s">Free Consultations</h4>
                   <p class="wow fadeInUpSmall" data-wow-delay=".1s">Our acquaintance with a client always begins with a
                     free consultation to find out what kind of work they are looking for.</p>
                 </div>
@@ -873,7 +880,7 @@ a {
               <article class="box-minimal">
                 <div class="box-chloe__icon novi-icon linearicons-star wow fadeIn" data-wow-delay=".2s"></div>
                 <div class="box-minimal-main wow-outer">
-                  <h4 class="box-minimal-title wow slideInDown" data-wow-delay=".2s">100% Guaranteed</h4>
+                  <h4 class="box-minimal-title wow slideInDown" style="color: white;" data-wow-delay=".2s">100% Guaranteed</h4>
                   <p class="wow fadeInUpSmall" data-wow-delay=".2s">All the results that you get from our company are
                     100% guaranteed to offer you the best choice of work</p>
                 </div>
